<resources>
    <string name="app_name">RaceTracker</string>
    <string name="GPSnowhere">GPS координат нет!</string>
    <string name="Port">Порт</string>
    <string name="ServerPort">Порт сервера:</string>
    <string name="viewStartTxt">Этот текст должен быть заменён конфигурацией текущего старта.</string>
    <string name="nullTime">0000-00-00 00:00:00</string>
    <string name="currentRaceConfig">Текущее соревнование и заезд:</string>
    <string name="activityError">"Ошибка распознавания Avtivity to show (REGLEVEL)"</string>
    <string name="gps_label">GPS координаты: </string>
    <string name="Actions">События: </string>
    <string name="GPS_enabled">GPS активировано: </string>
    <string name="gps_no_rights">У приложения нет прав на использование GPS датчика!</string>
    <string name="Enable_GPS">Необходимо активировать GPS! </string>
    <string name="nfcMarkslist">Список меток:</string>
    <string name="regTypeLabel">Вы войдёте как:</string>
    <string name="WriteNFC">Записать в метку</string>
    <string name="CommitButton">Сохранить на сервер</string>
    <string name="save">Сохранить</string>
    <string name="LoginToChangeLabel">Кому меняем:</string>
    <string name="registregList">Список зарегистрировавшихся:</string>
    <string name="LevelTypeList">Список вариантов доступа:</string>
    <string name="nfc_button_on">NFC активен</string>
    <string name="nfc_button_off">NFC не активен</string>
    <string name="text_nfc_log">Это текст логов NFC датчика</string>
    <string name="NFCrecived">NFC метка считана:</string>
    <string name="download">Скачать(*.csv), для Exel</string>
    <string name="results_download">результаты</string>
    <string name="marks_download">метки</string>
    <string name="log_download">технический лог</string>
    <string name="setter">Назначить</string>
    <string name="raceStartRegister">Зарегистрироваться на активный старт</string>
    <string name="RaceSetup">Управление заездами</string>
    <string name="ServMainLog">Список с сервера:</string>
    <string name="NFC_To_Server">Метка отправлена на сервер -</string>
    <string name="raceStart">нет регистрации на заезд!</string>
    <string name="noRaceStart">заезд не объявлен!</string>
    <string name="loginInfo">информация о доступе</string>
    <string name="raceNo">Номер, название мероприятия</string>
    <string name="startNo">Номер, название старта на мероприятии</string>
    <string name="declare">Объявить конфигурацию заезда</string>
    <string name="LoginLevel"> Уровень доступа:</string>
    <string name="ServerTime"> 00:00:00</string>
    <string name="ServerTimeLabel">Время на сервере</string>
    <string name="statusStr">строка состояний</string>
    <string name="ServerIP">Адрес сервера</string>
    <string name="ipaddress">127.0.0.1</string>
    <string name="secondsTimer">Время, секунды </string>
    <string name="secondsMainLog">Лог событий, секунды</string>
    <string name="serverTimers">Таймеры сервера</string>
    <string name="serverTimersInfo">Таймер, это число секунд между обновлениями данных с сервера(время сервера и лог событий) не рекомендуется ставить их слишком маленькими так как это драмматически увеличивает объём трафика.\n
        рекомендованные значения: для обновления времени - не менее 10 секунд, для обновления лога событий - не менее 30 секунд. \n \n
        участникам гонок можно устанавливать синхронизацию времени 1-2 секунды, но время обновления лога событий не имеет смысла увеличивать.
    </string>
    <string name="RegistratinInctruction">Здесь назначаются права доступа в программу зарегистрировавшимся пользователям.\n
    1. Подносим NFC метку пользователя с которой он будет индефицировать себя на мероприятии.\n
    2. Выбираем пользователя.\n
    3. Выбираем ему права. \n
    4. Нажимаем назначить. \n
    5. Также поддерживается функция удаления. Она позволяет помочь тем, кто забыл свой пароль. Но разумно применять эту функцию только до начала соревнований, на этапе регистрации. \n


    </string>
    <string name="noNFC">This device doesn\'t support NFC.</string>
    <string name="exit">Выход</string>
    <string name="enter">Вход</string>
    <string name="back">Назад</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="register">Регистрация</string>
    <string name="radio_guest">Гость</string>
    <string name="radio_user"> Участник</string>
    <string name="radio_admin">Администратор</string>
    <string name="EventMap">Карта мероприятия</string>
    <string name="underConstruction">В процессе создания.</string>
    <string name="phone">+00000000000</string>
    <string name="password">минимум 6 знаков</string>
    <string name="title_activity_user_manager">activity_userManager</string>
    <string name="noStr">\????</string>
    <string name="race_off">Событие не активно</string>
    <string name="race_on">Событие стартовало</string>
    <string name="nfc_log">NFC события</string>
    <string name="get_master_mark_button">Установить эталонную метку</string>
    <string name="registration_table">Пользователи</string>
    <string name="graph">График результатов</string>
    <string name="usersTable">Конфигурация старта</string>
    <string name="showStartTime">Время и дата начала:</string>
    <string name="showStopTime">Время и дата окончания:</string>
    <string name="setDateTime">Установить дату и время события</string>
    <string name="setTime">Установить время</string>
    <string name="setDate">Установить дату</string>
    <string name="grRes">График результатов</string>
    <string name="stopTime">При изменении установится дата завершения</string>
    <string name="startTime">При изменении установится дата старта</string>
    <string name="Longtitude">Longtitude</string>
    <string name="Latitude">Latitude</string>
    <string name="UseAutoGPS">Использовать для меток координаты места.</string>
    <string name="UseManualGPS">Вручную ввести координаты меток. Высота = 0!</string>
    <string name="UseNoGPS">Метки без координат</string>
    <string name="masterMarkSw">Эталонная марка?</string>
    <string name="users_table">Таблица участников</string>
    <string name="EventLog">Лог событий</string>
    <string name="GetResults">Скачать результаты</string>
    <string name="resultsInfo">Результаты загружаются в формате *.csv файла на карту дополнительной памяти.\n
    Путь к файлу будет отображён после успешной загрузки.\n
    Разумно использовать для поиска файла в файловой системе какой-нибудь файл-менеджер.\n
    Файл можно просматривать в Exel-е. В текстовом виде.\n\n
    Результаты это данные по регистрации меток участниками.\n
    Метки это список всех меток, которые используются принимаются программой для сореснований.\n
    Технический лог - данные обмена для debug-а приложения и спорных/странных ситуаций на мероприятии.</string>
    <string name="race_table">Таблица участников</string>
    <string name="map">Карта участников</string>
    <string name="poins_table">Редактор NFC точек</string>
    <string name="results">Результаты</string>
    <string name="no_master_mark">Эталонная метка не загружена!</string>
    <string name="title_activity_app_help_system">ActivityAppHelpSystem</string>
    <string name="mainPanel">Главный экран</string>
    <string name="loginHelpTxt">Как регистрироваться: \n</string>
    <string name="RegistratinHelp">Здесь назначаются права доступа в программу зарегистрировавшимся пользователям.\n\n
        Нужно выбрать пункт меню "Вход" далее:\n
    1. выбираем пользователя(желательно, но не обязательно - номер вашего телефона в формате +7.....). Принимается только 12 значный логин \n
    2. нажимаем назначить. \n\n

        Если вы уже зарегистрированы в системе и пароль введён правильно - вы увидете свой уровень доступа,
        он указан красным внизу справа). \n\n
        Если пароль введён не верно или первый раз заходите для участия - вы будете зарегистрированы как Guest. \n\n
        Для повторного ввода надо выйти из регистрации (кнопка выхода) \n\n
        Уровень доступа указан красным внизу справа). \n\n
        Права может изменить только администратор и только после того как вы уже зарегистрировались на уровне Guest.\n\n
        Для входа участником, нужно уведомить администратора о необходимости назначить вашему логину права и после этого зарегистрироваться снова. \n\n
        Если вы не помните пароль - этот вопрос тоже может решить олько администратор (он удаляет старую регистрационную запись и вы входите заново)

    </string>
    <string name="GuestAccessHelp">
        Это гостевой доступ, он даёт возможность видеть происходящее на соревновании. скорость обновления поступающих данных задаётся в настройках. \n\n
        Сюда попадают если:\n\n
        1. Вы зарегистрировались первый раз.\n
        2. Правильно ввели логин-пароль, но администратор ещё не назначил вам доступ участника.\n
        3. Вы неправильно ввели пароль.\n
        4. Нет связи вашего устройства с сервером.\n\n

        Если вы участник - во всех случаях, стоит обратиться к администратору.\n
        Если Администратор, то к разработчику.
    </string>
    <string name="UserAccessHelp">
        Это доступ участника соревнований. \n
        Тут действует функционал регистрации прохождения NFC меток. Датчик NFC, конечно же, должен быть в этом устройстве и
        он должен быть включен.\n\n

        Время регистрации метки учитывается ПО ВРЕМЕНИ СЕРВЕРА, а не вашего устройства.
        Данные, записанные в таблицу результатов перетирают лог событий и показывают вам, как регистрация метки произошла.\n\n
        Перед стартом: \n
        1.Разумно установить в настройках таймер обновления событий побольше (более 1 раза в 60 секунд).\n

        2. Нажмите SwithcButton в положение \"Событие стартовало\".  Это заблокирует возможность случайного выхода. \n

        3. Обязательно нужно зарегистрироваться на активный старт. Данные старта, устанавливаются администратором перед
        стартом. \n

        4. Обязательно нужно скачать и установить эталонную метку. она нужна для инициации регистрации трэковой NFC метки  \n

        5. В процессе прохождения маршрута для регистрации метки нужно считать эталонную метку в машине и быстро, не дольше 5 секунд
        считать трэковую метку. Так она будет учтена. \n

        Выходить или закрывать приложение в процессе гонки нежелательно. \n
        Для оперирования скачиваемыми файлами у вас должен быть файлменеджер типа Total Commander.\n \n
    </string>
    <string name="AdminAccessHelp">
        Это доступ администратора гонок.\n
        За помощью обращайтесь к разработчику. :)\n\n\n

    </string>
    <string name="ResultsHelp">
        1. для оперирования файлами у вас должен быть файлменеджер типа Total Commander.\n \n
        2. все результаты система загружает на SD карту. Соответсвенно она должна быть обязаельно.(логи могут быть внушительных размеров и при просмотре на телефоне в exel например могут запросто съесть всю системную память. Поэтому храним только на карте.)\n\n
        3. Файл технического лога лучше не качать через мобильный интернет. Он может достигать размера в гигабайты и не откроется на телефоне.\n\n
        4. Путь, куда файл сохранён на телефоне показывается сразу после загрузки. \n чтобы его не потерять нужно поставить лог обновления событий побольше иначе данные быстро затруться.\n\n

    </string>
    <string name="about">О программе</string>
</resources>