<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/help"
        android:orderInCategory="2"
        android:title="@string/help" />

    <item
        android:id="@+id/exit"
        android:orderInCategory="1"
        android:title="@string/back" />


    <item
        android:id="@+id/EventLog"
        android:orderInCategory="3"
        android:title="@string/EventLog" />

    <item
        android:id="@+id/GetResults"
        android:orderInCategory="4"
        android:title="@string/GetResults" />

    <item
        android:id="@+id/map"
        android:orderInCategory="6"
        android:title="@string/map" />



    <item
        android:id="@+id/graph"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="5"
        android:title="@string/graph" />

</menu>