<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/login"
        android:icon="?android:attr/actionModeCloseDrawable"
        android:orderInCategory="1"
        android:title="@string/enter" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="2"
        android:title="@string/settings" />
    <item
        android:id="@+id/help"
        android:icon="?android:attr/alertDialogIcon"
        android:orderInCategory="3"
        android:title="@string/help" />

    <item
        android:id="@+id/donate"
        android:icon="?android:attr/actionModePasteDrawable"
        android:orderInCategory="4"
        android:title="@string/about" />

    <item
        android:id="@+id/exit"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="5"
        android:title="@string/exit" />

</menu>