<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".adminLib.ActivityResultsTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginInfo"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/loginInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:visibility="visible" />

        <Button
            android:id="@+id/downLoadResultsCVS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results_download" />

        <Button
            android:id="@+id/downLoadMarksCVS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marks_download" />

        <Button
            android:id="@+id/downLoadLogCVS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_download" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ServerTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTimeLabel" />

            <TextView
                android:id="@+id/ServerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTime"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ScrollView
            android:id="@+id/myview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:scrollbarStyle="insideOverlay">
        <TextView
            android:id="@+id/userLogger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="TextView" />
        </ScrollView>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>