<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityGuestManager"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:visibility="visible" />

        <TextView
            android:id="@+id/gpsPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GPSnowhere"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ServerTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTimeLabel" />

            <TextView
                android:id="@+id/ServerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTime" />
        </LinearLayout>

        <TextView
            android:id="@+id/UserLogger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Actions"
            android:visibility="visible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>