<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityUserManager"
    android:id="@+id/MainGuestLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginInfo"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/get_master_mark_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/get_master_mark_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/raceStartRegister"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/gpsPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GPSnowhere"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:visibility="visible" />


        <TextView
            android:id="@+id/raceStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/raceStart"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/master_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_master_mark"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ServerTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTimeLabel" />

            <TextView
                android:id="@+id/ServerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTime"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />
        </LinearLayout>
        <ScrollView
            android:id="@+id/myview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:scrollbarStyle="insideOverlay">
        <TextView
            android:id="@+id/User_Monitor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_nfc_log" />

        </ScrollView>

        <TextView
            android:id="@+id/master_mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_master_mark"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
