<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".adminLib.ActivityNFCMarksRedactor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/NfS_Mark_Editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/save_nfcButton"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/WriteNFC" />

        </LinearLayout>

        <TextView
            android:id="@+id/gpsPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GPSnowhere"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ServerTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTimeLabel" />

            <TextView
                android:id="@+id/ServerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ServerTime" />
        </LinearLayout>

        <TextView
            android:id="@+id/CurrentNFC_Label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/CommitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CommitButton" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
        <ScrollView
            android:id="@+id/myview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:scrollbarStyle="insideOverlay">

        <TextView
            android:id="@+id/NFC_ConfigurationLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_nfc_log" />
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>